Fix Responsive on Mobile devices

--- a/css/main.scss
+++ b/css/main.scss
@@ -91,8 +91,11 @@ html.lenis {
 
 	.container {
 		background-color: $back2;
+		max-width: 350px;
 
-		@media (max-width:400px) {
+		@media (max-width: 620px) {
+			width: 75% !important;
+
 			.row {
 				flex-direction: column;
 				justify-content: center;
@@ -109,6 +112,7 @@ html.lenis {
 	.lang-tog {
 		cursor: pointer;
 		transition: $duration;
+		border: 1px solid red;
 
 		&:hover {
 			background-color: $main;
